# magic_helper_vk_bot

./: .env.example  .flake8  .gitignore  IDEAS.md  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  structure.md  test.py  test1.py
alembic/: env.py
alembic/versions/: 00efacd34169_.py  3c18cc4483d4_.py  521552d24380_.py  6db23a3c9ae1_.py  cb901c609ea2_.py
app/: __main__.py  context.py  custom_rules.py  delayed_task.py  entrypoint.py  logs.py  routes.py
app/core/: __init__.py  cmd_args.py  config.py  constants.py  custom_rules.py  exceptions.py  logs.py  message_parser.py  middlewares.py  parser.py  patterns.py  typedefs.py  utils.py  validators.py
app/core/custom_rules/: __init__.py  filter_rules.py  get_rules.py
app/entities/: __init__.py  checks_entities.py  magic_entities.py  on_check.py  on_check_entities.py  payloads.py  profile_entities.py  rcc_entities.py  report_entities.py
app/handlers/: __init__.py  base.py  checks_cmd.py  complex_cmd.py  count_checks.py  discord_cmd.py  get_bans.py  get_logs.py  magic_records.py  magic_records_cmd.py  magic_reports.py  other_cmd.py  owner_cmd.py  players_cmd.py  reports_cmd.py  single_cmd.py
app/handlers/magic_helper/: __init__.py  checks_message.py  report_message.py
app/handlers/magic_records/: __init__.py  checks_cmds.py  checks_payloads.py  find_bans_cmds.py  find_stats_cmds.py  other_cmds.py  owner_cmds.py  reports_cmds.py  stats_cmds.py
app/helpers/: __init__.py  collector.py  custom_rules.py  filtres.py  parser.py  rcc_manager.py  time_assistant.py
app/helpers/custom_rules/: __init__.py  get_rules.py
app/services/: api_client.py  base_api.py  http_client.py  magic_helper_api.py  validators.py
app/services/RCC/: RCC_api.py  models.py
app/services/api/: __init__.py  base.py  check_api.py  magic_rust_api.py  profile_api.py  rcc_api.py  report_api.py  utils.py
app/services/discord/: discord_api.py  discord_client.py  error_codes.py  exceptions.py  models.py
app/services/magic_rust/: MR_api.py  models.py
app/services/rust_banned/: models.py  rust_banned_api.py
app/services/storage/: __init__.py  base.py  base_class.py  check_controller.py  check_discord_controller.py  controller.py  memory_storage.py  report_controller.py  session.py
app/services/storage/crud/: __init__.py  base_crud.py  crud_check_discord.py  crud_checks.py  crud_reports.py
app/services/storage/models/: __init__.py  check.py  check_discord.py  reports.py
app/services/storage/schemas/: __init__.py  check.py  check_discord.py  reports.py
app/tools/: __init__.py  collector.py  delayed_tasks.py  filtres.py  on_check.py  parser.py  storages.py  time_assistant.py
app/tools/custom_rules/: __init__.py  filter_rules.py  get_rules.py
app/tools/filtres/: __init__.py  abc.py  mr_players.py  rcc_players.py  reports.py
app/views/: __init__.py  abc.py  checks_view.py  eac_view.py  kd_view.py  moderators_check_view.py  new_players_view.py  on_check_view.py  player_discords_view.py  player_stats_view.py  rcc_players_view.py  reports_view.py  stats_view.py
docker/bot/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
docs/: commands.md
tests/response_sample/: new_message.json
