[tool.poetry]
name = "magic-helper-vk-bot"
version = "0.1.0"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vkbottle = "^4.3.10"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
loguru = "^0.6.0"
asyncpg = "^0.26.0"
pydantic = "^1.10.2"
aiohttp = "^3.8.3"
pendulum = "^2.1.2"
rust-eac-information = {git = "https://github.com/MaHryCT3/rust-eac-infromation.git"}
pympler = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
black = {version = "^22.10.0", allow-prereleases = true}
ruff = "^0.0.213"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "single"

[tool.black]
skip-string-normalization = true
line-length = 120
exclude = '(\.git|\.venv|\.vscode|\.env*)'