[tool.poetry]
name = "magic-helper-vk-bot"
version = "0.1.0"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vkbottle = "^4.3.10"
SQLAlchemy = "1.4.46"
alembic = "^1.8.1"
loguru = "^0.6.0"
asyncpg = "^0.26.0"
pydantic = "^1.10.2"
aiohttp = "^3.8.3"
pendulum = "^2.1.2"
pympler = "^1.0.1"
aiofiles = "^22.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
black = {version = "^22.10.0", allow-prereleases = true}
ruff = "^0.0.213"
mypy = "^0.991"
types-aiofiles = "^22.1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ['Q', 'F', 'I', 'ANN', 'B', 'C4', 'TID', 'ARG', 'PLR']
ignore = ['ANN101', 'ANN204', 'ANN401']


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"env.py" = ["ALL"]
"alembic/versions/*.py" = ["ALL"]
"__main__.py" = ["E402"]
"get_rules.py" = ["ANN003", "ANN002", 'ARG002']
"app/handlers/*.py" = ['ARG001']

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.black]
skip-string-normalization = true
line-length = 120
exclude = '(\.git|\.venv|\.vscode|\.env*)'

[tool.mypy]
python_version = '3.11'
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false
warn_unused_configs = true
disable_error_code = 'assignment, union-attr, override'